[metadata]
name = eclsdk
version = 0.0.9
summary = SDK for building applications to work with Enterprise Cloud 2.0
description-file =
    README.rst
author = NTT Communications
author-email = ecl-cli-sdk@ntt.com
home-page = https://ecl.ntt.com
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    ecl

[wheel]
universal = 1
